<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.mosip.certify</groupId>
  <artifactId>soap-dataprovider-plugin</artifactId>
  <version>0.3.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>soap-dataprovider-plugin</name>
  <url>https://github.com/mosip/digital-credential-plugins</url>

  <licenses>
    <license>
      <name>MPL 2.0</name>
      <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git://github.com/mosip/digital-credential-plugins.git</connection>
    <developerConnection>scm:git:ssh://github.com:mosip/digital-credential-plugins.git</developerConnection>
    <url>https://github.com/mosip/digital-credential-plugins</url>
    <tag>HEAD</tag>
  </scm>
  <developers>
    <developer>
      <name>MOSIP</name>
      <email>mosip.emailnotifier@gmail.com</email>
      <organization>io.mosip</organization>
      <organizationUrl>https://www.mosip.io</organizationUrl>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>11</java.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
    <maven-compiler-plugin.source>11</maven-compiler-plugin.source>
    <maven-compiler-plugin.target>11</maven-compiler-plugin.target>
    <maven-compiler-plugin.version>2.4</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
    <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
    <maven-source-plugin>2.2.1</maven-source-plugin>
    <nexus-staging-maven-plugin>1.6.7</nexus-staging-maven-plugin>
    <git-commit-id-plugin.version>3.0.1</git-commit-id-plugin.version>
    <maven.jacoco.version>0.8.5</maven.jacoco.version>
    <maven-javadoc-plugin.version>3.3.1</maven-javadoc-plugin.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.mosip.certify</groupId>
      <artifactId>certify-core</artifactId>
      <version>0.10.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>5.11.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>6.1.4</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.12</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.springframework.ws</groupId>-->
<!--      <artifactId>spring-ws-core</artifactId>-->
<!--      <version>4.0.11</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.springframework.ws</groupId>-->
<!--      <artifactId>spring-ws-support</artifactId>-->
<!--      <version>4.0.7</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>jakarta.xml.ws</groupId>-->
<!--      <artifactId>jakarta.xml.ws-api</artifactId>-->
<!--      <version>4.0.2</version>-->
<!--    </dependency>-->
    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>2.3.3</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web-services</artifactId>
      <version>3.2.3</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>jakarta.xml.bind</groupId>-->
<!--      <artifactId>jakarta.xml.bind-api</artifactId>-->
<!--      <version>4.0.0</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.glassfish.jaxb</groupId>-->
<!--      <artifactId>jaxb-runtime</artifactId>-->
<!--      <version>4.0.5</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.sun.xml.ws</groupId>-->
<!--      <artifactId>jaxws-rt</artifactId>-->
<!--      <version>3.0.0</version>-->
<!--    </dependency>-->
  </dependencies>

  <repositories>
    <repository>
      <id>ossrh</id>
      <name>CentralRepository</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <layout>default</layout>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>central</id>
      <name>MavenCentral</name>
      <layout>default</layout>
      <url>https://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <!-- assembly-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>${maven-assembly-plugin.version}</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <doclint>none</doclint>
          <sourcepath>src/main/java</sourcepath>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.1.2</version>
        <executions>
          <execution>
            <id>default-deploy</id>
            <phase>deploy</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.14</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <id>default-deploy</id>
            <phase>deploy</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>false</autoReleaseAfterClose>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <inherited>true</inherited>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
        <configuration>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
          <includeOnlyProperties>
            <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
            <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
          </includeOnlyProperties>
          <commitIdGenerationMode>full</commitIdGenerationMode>
          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
          <!-- <format>json</format> -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <skipTests>true</skipTests>
          <skip>true</skip>
          <argLine>
            ${argLine} --add-opens
            java.xml/jdk.xml.internal=ALL-UNNAMED
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${maven.jacoco.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>make-jar-executable</id>
            <phase>package</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <!-- Create a shell script to run the JAR file with executable permission -->
                <chmod file="${project.build.directory}/*.jar" perm="ugo+rx"/>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
<!--      <plugin>-->
<!--        <groupId>com.sun.xml.ws</groupId>-->
<!--        <artifactId>jaxws-maven-plugin</artifactId>-->
<!--        <version>3.0.0</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <goals>-->
<!--              <goal>wsimport</goal>-->
<!--            </goals>-->
<!--          </execution>-->
<!--        </executions>-->
<!--        <configuration>-->
<!--          <packageName>io.mosip.certify.wsdl</packageName>-->
<!--          <wsdlDirectory>${project.basedir}/src/main/resources</wsdlDirectory>-->
<!--          <wsdlFiles>-->
<!--            <wsdlFile>public-countries.wsdl</wsdlFile>-->
<!--          </wsdlFiles>-->
<!--          <sourceDestDir>${project.build.sourceDirectory}</sourceDestDir>-->
<!--          <keep>true</keep>-->
<!--          <extension>true</extension>-->
<!--        </configuration>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.jvnet.jaxb2.maven2</groupId>
        <artifactId>maven-jaxb2-plugin</artifactId>
        <version>0.15.3</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <generatePackage>io.mosip.certify.wsdl</generatePackage>
          <generateDirectory>${project.basedir}/src/main/java</generateDirectory>
          <schemaDirectory>${project.basedir}/src/main/resources</schemaDirectory>
          <schemaIncludes>
            <include>*.wsdl</include>
            <include>*.xsd</include>
          </schemaIncludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
